# custom-image-classification

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
api/: app.py  routes.py
api/services/: predictor.py
api/templates/: index.html  predict.html
data/: data.csv  test.csv  train.csv
lglutide/: config.py  dispatcher.py  main.py  make_data.py  nn.py  predict.py  requirements.txt  training_stats.csv  training_stats.txt
lglutide/architectures/: alexnet.py  cnn.py  densenet.py  nn.py  resnet.py  vgg.py
lglutide/lglutide/: README.rst  pyproject.toml  requirements.txt
lglutide/lglutide/lglutide/: cnn.py
lglutide/lglutide/tests/: test_lglutide.py
lglutide/models/10/: config.json
lglutide/models/6/: config.json
lglutide/models/8/: config.json
lglutide/models/9/: config.json
lglutide/runs/: events.out.tfevents.1678860598.dgx-p100-01.2152901.0
lglutide/runs/Loss_Testing Loss/: events.out.tfevents.1678860750.dgx-p100-01.2152901.2
lglutide/runs/Loss_Training Loss/: events.out.tfevents.1678860750.dgx-p100-01.2152901.1
lglutide/runs/fold_0/: events.out.tfevents.1679050332.dgx-p100-01.3388150.0  events.out.tfevents.1679050349.dgx-p100-01.3388716.0
lglutide/runs/fold_1/: events.out.tfevents.1679050910.dgx-p100-01.3388716.3
lglutide/runs/fold_2/: events.out.tfevents.1679051365.dgx-p100-01.3388716.6
lglutide/runs/fold_3/: events.out.tfevents.1679051831.dgx-p100-01.3388716.9
lglutide/utils/: augmentations.py  logger.py  options.py
notebooks/: playground.ipynb
(+113 files in other folders)
